# VISTA-AI-MobileAutomationTesting

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  STAGE1.md  STAGE2.md  STAGE3.md  STAGE4.md  STAGE5_6.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
examples/: login_test.yaml  open_files_app.yaml  open_files_final.yaml  open_files_icon.yaml  open_files_search.yaml  open_files_simple.yaml  open_files_verified.yaml  simple_simulator_test.yaml  simulator_integration_test.yaml  simulator_test.yaml  stage1_screenshot_demo.py  step1_tap_files.yaml  step2_search.yaml  step3_shared.yaml
tests/: __init__.py
tests/unit/: __init__.py  test_coordinates.py  test_debug_overlay.py  test_dsl_parser.py  test_icon_detection.py  test_ios_driver.py  test_ocr_providers.py  test_reporters.py  test_scaffold.py  test_text_matcher.py
vista/: __init__.py  config.py
vista/cli/: __init__.py  main.py
vista/driver/: __init__.py  base.py  coordinates.py  ios_appium.py
vista/dsl/: __init__.py  parser.py  steps.py
vista/matcher/: __init__.py  base.py  disambiguation.py  icon_matcher.py  text_matcher.py
vista/report/: __init__.py  html_reporter.py  junit_reporter.py  models.py  reporter_base.py
vista/runner/: __init__.py  actions.py  engine.py  executor.py  planner.py  waits.py
vista/vision/: __init__.py  debug.py  elements.py  screen.py
vista/vision/icons/: __init__.py  base.py  template_matcher.py
vista/vision/ocr/: __init__.py  base.py  easy_ocr.py  paddle_ocr.py
