[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "vista-mobile"
version = "0.1.0"
description = "Vision-based Intelligent Screen Test Automation — OCR and icon-based mobile UI testing for iOS and Android"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
  { name = "VISTA Contributors" }
]
keywords = ["mobile", "automation", "testing", "ocr", "vision", "appium", "ios", "android"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
]
requires-python = ">=3.9"

dependencies = [
  "appium-python-client>=2.11.0",
  "paddleocr>=2.7.0.3",
  "easyocr>=1.7.0",
  "opencv-python>=4.8.0,<5.0.0",
  "numpy<2.0.0",
  "rapidfuzz>=3.0.0",
  "pillow>=10.0.0",
  "pydantic>=2.0.0",
  "pyyaml>=6.0.0",
  "typer>=0.9.0",
  "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.11.0",
  "pytest-timeout>=2.1.0",
  "black>=23.0.0",
  "ruff>=0.0.285",
  "mypy>=1.5.0",
  "pre-commit>=3.4.0",
  "mkdocs-material>=9.4.0",
  "syrupy>=4.0.0",
]

[project.scripts]
vista = "vista.cli.main:app"

[tool.setuptools]
packages = ["vista"]

[tool.setuptools.package-data]
vista = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "UP",   # pyupgrade
]
ignore = ["E203", "E501", "W503"]

[tool.ruff.isort]
known-first-party = ["vista"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
markers = [
  "unit: unit tests that do not require a device or simulator",
  "vision: tests of OCR and icon detection providers using fixtures",
  "simulator: integration tests that require a booted iOS simulator and Appium server",
]
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["vista"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
